# pre-commit-hooks

./: .pre-commit-hooks.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
pre_commit_hooks/: remove_core_settings_tsproj.py
