# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]   # PEP 517‑Build‑Backend
build-backend = "setuptools.build_meta"

[project]
name = "precommit-hooks"
version = "1.0.0"
description = "Reusable pre‑commit hook for TwinCAT projects"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Jan B", email = "jan.birkhofer@bluewin.ch"}]
requires-python = ">=3.8"
# Falls dein Skript zusätzliche Laufzeit‑Abhängigkeiten hat, liste sie hier auf:
# dependencies = ["requests>=2.0"]

# ------------------------------
# Console‑Script‑Entry‑Point
# ------------------------------
[project.scripts]
remove-core-settings = "pre_commit_hooks.remove_settings_tsproj:main"